--- a/app/product/css/style.css
+++ b/app/product/css/style.css
@@ -20,4 +20,9 @@ img {
   font-weight: bold; }
 
 .text {
-  font-size: 1.4rem; }
+  font-size: 1.4rem;
+  -webkit-transform: translate(50%);
+          transform: translate(50%); }
+
+html, body {
+  color: blue; }
