ディレクトリ名変更 dev→src pathを変数に

--- a/app/src/ejs/index.ejs
+++ b/app/src/ejs/index.ejs
@@ -1,7 +1,7 @@
+<% var page = 'top' %>
 <% include parts/_header %>
 <body>
   <h1 id="title">これはejsのサンプルです</h1>
-  <p><%= message %></p>
   <h2>これはサブタイトルですかね</h2>
   <h3>h3です</h3>
   <ul>
@@ -10,8 +10,10 @@
     <li>リスト3</li>
     <li>リスト4</li>
     <li>リスト5</li>
+    <li>リスト6</li>
   </ul>
-  <p>本自治はお日柄もよくて</p>
+  <p>本自治はお日柄もよくて洗濯日和かもしれません</p>
+  <p>明日のお昼ご飯はカレーがいいかもね。</p>
 <% include parts/_footer %>
 </body>
 </html>
