htmlhintが正しく動いていなかった問題を修正

--- a/app/src/pc/ejs/parts/_header.ejs
+++ b/app/src/pc/ejs/parts/_header.ejs
@@ -14,7 +14,7 @@
   <meta property="og:image" content="<%= og.image %>" />
   <meta property="og:description" content="<%= og.description %>" />
   <meta property="og:site_name" content="​<%= og.title %>" />
-  <link href="/pc/css/normalize.css" rel="stylesheet" type="text/css">
-  <link href="/pc/css/reset.css" rel="stylesheet" type="text/css">
+  <link href="/common/css/normalize.css" rel="stylesheet" type="text/css">
+  <link href="/common/css/reset.css" rel="stylesheet" type="text/css">
   <link href="/pc/css/<%= page %>.css" rel="stylesheet" type="text/css">
 </head>
