--- a/app/src/pc/sass/settings/_var.scss
+++ b/app/src/pc/sass/settings/_var.scss
@@ -1,3 +1,5 @@
+@charset "UTF-8";
+
 //===================================
 // color
 //===================================
@@ -9,11 +11,11 @@ $color-white: #fff;
 //===================================
 // font
 //===================================
-$font-family-jp: "Hiragino Kaku Gothic ProN","YuGothic", "游ゴシック", "メイリオ", Meiryo, Roboto, Osaka, sans-serif;
+$font-family-jp: "Hiragino Kaku Gothic ProN", "YuGothic", "游ゴシック", "メイリオ", Meiryo, Roboto, Osaka, sans-serif;
 $font-family-en: "Avenir Next", Helvetica, Arial, sans-serif;
 
 $font-size-default: 1.4rem;
-$font-size-exsmall: 0.9rem;
+$font-size-exsmall: .9rem;
 $font-size-small: 1.2rem;
 $font-size-large: 1.8rem;
 $font-size-exlarge: 3rem;
