--- a/app/src/pc/sass/top.scss
+++ b/app/src/pc/sass/top.scss
@@ -1,7 +1,8 @@
+@charset "UTF-8";
+
 @import 'settings/var';
 @import 'settings/mixin';
 @import 'settings/base';
-
 
 //===================================
 // style
