reset.cssとnormalize.cssをsassで読み込む形に修正

--- a/app/src/pc/sass/top.scss
+++ b/app/src/pc/sass/top.scss
@@ -1,7 +1,15 @@
 @charset "UTF-8";
 
+// settings
 @import 'settings/var';
 @import 'settings/mixin';
+
+// リセット
+@import 'settings/normalize';
+@import 'settings/reset';
+
+/* top */
+// ベース
 @import 'settings/base';
 
 //===================================
