sprite用のタスクとサンプルファイル追加

--- a/app/src/pc/ejs/index.ejs
+++ b/app/src/pc/ejs/index.ejs
@@ -4,6 +4,7 @@
     <h1>オレオレテンプレート</h1>
     <h2>version 0.0.2</h2>
     <p>2016/3/31 まだ直したいところあるけどとりあえずアップ</p>
+    <div class="sprite"></div>
     <% include parts/_footer %>
   </div>
 </body>
