--- a/app/src/pc/ejs/index.ejs
+++ b/app/src/pc/ejs/index.ejs
@@ -1,9 +1,9 @@
-<% var page = 'top' %><% include parts/_header %>
-<body>
+<% var page = 'top' %><% include parts/_head %>
   <div id="wrap" class="wrap">
-    <h1>オレオレテンプレート</h1>
-    <h2>version 0.0.2</h2>
-    <p>2016/3/31 まだ直したいところあるけどとりあえずアップ</p>
+    <% include parts/_header %>
+    <h1>My website template</h1>
+    <h2>version 0.0.3</h2>
+    <p>2016/4/11 update</p>
     <div class="sprite"></div>
     <% include parts/_footer %>
   </div>
