--- a/app/src/pc/ejs/parts/_footer.ejs
+++ b/app/src/pc/ejs/parts/_footer.ejs
@@ -1,3 +1,3 @@
-<footer id="footer" class="footer">
-  <small>copyright©2016 diwao all rights reserved.</small>
+<footer class="footer">
+  footer
 </footer>
