--- a/app/src/pc/ejs/parts/_header.ejs
+++ b/app/src/pc/ejs/parts/_header.ejs
@@ -1,18 +1,3 @@
-<!DOCTYPE html>
-<html lang="ja">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>​<%= title %></title>
-  <meta name="author" content="<%= author %>" />
-  <meta name="Description" content="<%= description %>" />
-  <meta name="Keywords" content="<%= keywords %>" />
-  <link rel="shortcut icon" href="<%= favicon %>">
-  <meta property="og:locale" content="ja_JP" />
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="<%= og.url %>">
-  <meta property="og:image" content="<%= og.image %>" />
-  <meta property="og:description" content="<%= og.description %>" />
-  <meta property="og:site_name" content="​<%= og.title %>" />
-  <link href="pc/css/<%= page %>.css" rel="stylesheet" type="text/css">
-</head>
+<header class="header">
+  header
+</header>
